# project_tmp_server

./: CMakeLists.txt  README.md
doc/mysql_config/: mysql_doc.txt
doc/redis_config/: redis.conf  redis_doc.txt
release/linux/Debug/: db_manager  dbc_server  game_server  gate_server  mail_server
src/: CMakeLists.txt
src/_include/: error_check.h  error_def.h  linked_list.h  ngx_global.h  process_error.h  type_def.h
src/base_lib/: CMakeLists.txt  id_object_pool.h  rb_tree.cxx  rb_tree.h
src/config/: CMakeLists.txt  ngx_c_conf.cxx  ngx_c_conf.h  ngx_string.cxx
src/db/: CMakeLists.txt  mysql_def.h  mysql_wrap.cxx  mysql_wrap.h  tredis.cxx  tredis.h
src/db_manager/: CMakeLists.txt
src/dbc_server/: CMakeLists.txt
src/game_server/: CMakeLists.txt
src/gate_server/: CMakeLists.txt  nginx.cxx
src/json/: CMakeLists.txt  cJSON.cxx
src/log/: CMakeLists.txt  ngx_log.cxx  ngx_log.h  ngx_printf.cxx
src/logic/: CMakeLists.txt  ngx_c_slogic.cxx  ngx_c_slogic.h
src/mail_server/: CMakeLists.txt  nginx.cxx
src/misc/: CMakeLists.txt  ngx_c_memory.cxx  ngx_c_threadpool.cxx
src/net/: CMakeLists.txt  ngx_c_socket.cxx  ngx_c_socket.h  ngx_c_socket_accept.cxx  ngx_c_socket_conn.cxx  ngx_c_socket_request.cxx  ngx_c_socket_time.cxx
src/proc/: CMakeLists.txt  ngx_event.cxx  ngx_process_cycle.cxx
src/server_config/: CMakeLists.txt  ss_game_app.cxx  ss_game_app.h
src/signal/: CMakeLists.txt  core_dumper.cpp  core_dumper.h  ngx_signal.cxx
src/vm/: CMakeLists.txt  vm_common_alloc.cxx  vm_common_alloc.h
